[package]
name = "feroldinhobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["std_rng"] }
tbot = "0.6.7"
tokio = { version = "^0.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
